# datainsightengine

./: .gitignore  README.md  RESULTS.md  RESULTS2.md  WALKTHROUGH.md  agentic_log.json  answer_key.json  config.yaml  config_data2.yaml  csvdata.csv  findings.json  insights.json  insights.md  insights_data2.json  insights_data2.md  plan.md  pyproject.toml
eval_out/: RESULTS.md  results_quality.csv  results_scaling.csv
src/insight/: __init__.py  agentic.py  answer_key.py  baseline.py  cli.py  config.py  evaluate.py  findings.py  grounding.py  ingest.py  jsonx.py  judge.py  llm.py  narrator.py  sandbox.py  selection.py
src/insight/detectors/: __init__.py  library.py
tests/: test_detectors.py  test_grounding.py  test_jsonx.py  test_selection.py
